--- a/order-summary-component-main/index.html
+++ b/order-summary-component-main/index.html
@@ -14,28 +14,29 @@
     <title>Frontend Mentor | Order summary card</title>
   </head>
   <body>
-    <section>
-      <div class="illustration">
-        <img src="images/illustration-hero.svg" alt="illustration" />
+    <div class="illustration">
+      <img src="images/illustration-hero.svg" alt="illustration" />
+
+      <div class="attribution">
         <h1>Order Summary</h1>
+
         <p>
           You can now listen to millions of songs, audiobooks, and podcasts on
           any device anywhere you like!
         </p>
-      </div>
-
-      <div class="attribution">
-        <i class="fa-solid fa-music"></i>
-        <div class="plan">
-        <h1>Annual Plan</h1>
-        <p>$59.99/year</p>
+        <div class="svetlio">
+          <div class="plan">
+            <i class="fa-solid fa-music"></i>
+            <div class="price">
+              <h1>Annual Plan</h1>
+              <p>$59.99/year</p>
+            </div>
+          </div>
+          <h4>Change</h4>
         </div>
-        <h4>Change</h4>
-      </div>
-      <div class="button">
         <button>Proceed to Payment</button>
-        <p>Cancel Order</p>
+        <p id="cancel">Cancel Order</p>
       </div>
-    </section>
+    </div>
   </body>
 </html>
